move user files to user module

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>commons</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.iotiq</groupId>
+            <artifactId>user</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
